crates/compiler/src/tests/e2e/good/0220_if_else_evaluation/main.gom
fn main() {
    let x = 42;
    println(int32_to_string(x));
    let x = "hello";
    println(x);
    let x = true;
    if x { println("true") } else { println("false") };
}
