crates/compiler/src/tests/e2e/bad/0035_let_unknown_token_in_if/main.gom
package main;

fn main() {
    let multiline = "hello \
                     \\world";
    string_println(multiline);
}
